--- a/app/src/main/res/menu/users_activitity_menu.xml
+++ b/app/src/main/res/menu/users_activitity_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/menuItemLogout"
-        android:title="@string/logout" />
+        android:id="@+id/menuItemSignOut"
+        android:title="@string/sign_out" />
 </menu>
