--- a/app/src/main/res/layout/users_activity.xml
+++ b/app/src/main/res/layout/users_activity.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/recyclerViewUsers"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@color/light_cyan"
+    android:nestedScrollingEnabled="false"
     android:paddingStart="8dp"
     android:paddingTop="32dp"
     android:paddingEnd="8dp"
     android:paddingBottom="32dp"
-    tools:context=".users.UsersActivity">
+    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    tools:context=".users.UsersActivity"
+    tools:listitem="@layout/user_item">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="Users"
-        android:textAlignment="center"
-        android:textColor="@color/cyan"
-        android:textSize="48sp" />
-
-</LinearLayout>
+</androidx.recyclerview.widget.RecyclerView>
