--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="gray">#FF777777</color>
     <color name="white">#FFFFFFFF</color>
     <color name="cyan">#FF009688</color>
     <color name="light_cyan">#33009688</color>
-    <color name="gray">#FF777777</color>
+    <color name="light_green">#2200FF00</color>
+    <color name="violet">#9b64de</color>
 </resources>
